# aws-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
aws_tools/: __init__.py  _async_tools.py  _check_fail_context.py  _snake_base_model.py  bedrock.py  cloud_formation.py  cognito.py  dynamoDB.py  dynamodb.py  dynamodb_async.py  ec2.py  ecr.py  ecs.py  firehose.py  s3.py  s3_async.py  s3_non_blocking.py  ses.py  sns.py  sns_ses.py  sqs.py  ssm.py  sts.py
aws_tools/asynchrone/: cloud_formation.py  cognito.py  dynamodb.py  ecr.py  ecs.py  firehose.py  s3.py  ses.py  sns.py  sqs.py
aws_tools/bedrock/: __init__.py  agent.py  client.py
aws_tools/synchrone/: cloud_formation.py  cognito.py  dynamodb.py  ecr.py  ecs.py  firehose.py  s3.py  ses.py  sns.py  sqs.py
compression_tools/: gz.py  tar.py
package/: pyproject.toml
package/aws_tools/: cloud_formation.py  dynamoDB.py  ecs.py  s3.py
samples/: chat.py  frontend.py
samples/chatbot/: backend.py  frontend.py
security_tools/: cert.py  jwt.py  password.py  rsa.py  secret.py  totp.py
stacks/: README.md  stack-domain.json  stack-network.json
stacks/databases/: stack-buckets.json  stack-buckets.yaml  stack-dynamo-db.json  stack-dynamoDB-table.yaml  stack-s3-lifecycle.yaml
stacks/ecr/: stack-ecr-repository.yaml
stacks/emailing/: stack-emailing.yaml
stacks/fargate/: stack-fargate-cluster.yaml
stacks/kinesis/: stack-firehose-stream.yaml  stack-firehose.yaml
tests/: test_cognito.py  test_dynamodb.py  test_ecs_description.py  test_ecs_events.py  test_s3.py  test_ses_payloads.py  test_sns_payloads.py
(+76 files in other folders)
