[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-tools"
dynamic = ["version"]
requires-python = ">= 3.12"
dependencies = [
  "aioboto3 >= 14.3.0"
]

[project.optional-dependencies]
dev = [
  "pydantic >= 2.10.5",
  "requests >= 2.32.3",
  "cryptography >= 43.0.1",
]
docs = []

[tool.setuptools]
packages = [
  "aws_tools"
]

[tool.setuptools.dynamic]
version = {attr = "aws_tools.__version__"}