[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-tools"
dynamic = ["version"]
requires-python = ">= 3.12"
dependencies = [
  "aioboto3 >= 14.3.0"
]

[project.optional-dependencies]
sns = [
  "cryptography >= 43.0.1",
  "pydantic >= 2.10.5",
]
ses = [
  "pydantic >= 2.10.5",
]

[tool.setuptools.packages.find]
include = ["aws_tools", "aws_tools.*"]

[tool.setuptools.dynamic]
version = {attr = "aws_tools.__version__"}